# zirak

./: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  env.yml  pyproject.toml  test.py  zirak.py
.github/workflows/: docker-deploy.yml
deploy/bot/: docker-compose.yml
deploy/watcher/: pyproject.toml  watcher.py  zirak-watcher.service
frontend/: package-lock.json  package.json  prompt.txt  prompt_generator.py
frontend/prompts/: component.txt  design_system.txt  design_system_2.txt  design_system_3.txt
frontend/src/lib/components/: MetadataDisplay.svelte  ProcessingStep.svelte  StrategyDisplay.svelte
frontend/src/routes/: +page.svelte
frontend/templates/: design_system.html  index.html  index10.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  index8.html  index9.html
frontend/templates/react/: index.html  main.js
src/: logger.py  notifications.py  settings.py
src/commands/: __init__.py  check_auth.py  default_command.py  run_bot.py  run_command.py
src/helpers/: prompts.py  telegraph_helper.py
src/llms/: General.py  OpenAI.py  VertexAI.py
src/mastodon/: mastodon_client.py
src/prompts/: mastodon_system_prompt.txt  mastodon_user_prompt.txt
test/: search_test.py  test_telegraph_feature.py  vertex_test.py
